added the fix for ANS paper

--- a/ANS-winter2014/7Eqn_ANS_2014/7Eqn_ANS_2014.tex
+++ b/ANS-winter2014/7Eqn_ANS_2014/7Eqn_ANS_2014.tex
@@ -20,7 +20,7 @@ $^\dagger$Idaho National Laboratory
 %\usepackage{subfigure}
 \usepackage{subcaption}
 \usepackage{float}
-
+\setlength{\columnsep}{0.5 in}
 
 \renewcommand{\div}{\vec{\nabla}\! \cdot \!}
 \newcommand{\grad}{\vec{\nabla}}
