--- a/ANS-winter2014/7Eqn_ANS_2014/7Eqn_ANS_2014.tex
+++ b/ANS-winter2014/7Eqn_ANS_2014/7Eqn_ANS_2014.tex
@@ -87,7 +87,7 @@ $^\dagger$Idaho National Laboratory
 \section{Introduction}
 %
 In this paper, we extend the entropy viscosity method, proposed by Guermond et al. \cite{jlg1, jlg2}
-to the well-posed 1-D 7-equation two-phase model \cite{DEM, berry}. This model is obtained by integrating the single-phase flow balance equations weighed by a characteristic function for each phase. The resulting system of equations contains non-conservative terms that describe the interaction between phases but also an equation for the volume fraction. This two-phase flow model is also known to be unconditionally hyperbolic, which is highly desirable when working with approximate Riemann solvers, and can be used for a wide range of applications. Its particularity comes from the pressure and velocity relaxation terms appearing in the volume fraction, momentum, and energy equations. When employing large values for the relaxation parameters, the two phases come be brought in equilibrium. The 7-equation model can degenerate into the 6-euqation model (same phasic pressure) \cite{Toumi_1996} and the 5-equation model (same phasic velocities and pressure) \cite{Kapila_2001}. The 7-equation model is currently discretized in space using \emph{discontinuous schemes} with approximate Riemann solvers derived from the well-established approaches for single-phase flows, while using an upwind-type flux for the non-conservative terms \cite{Saurel_2001a, Saurel_2001b, Li_2004, Zein_2010, Ambroso_2012}. 
+to the well-posed 1-D 7-equation two-phase model \cite{DEM, berry}. This model is obtained by integrating the single-phase flow balance equations weighed by a characteristic function for each phase. The resulting system of equations contains non-conservative terms that describe the interaction between phases but also an equation for the volume fraction. This two-phase flow model is also known to be unconditionally hyperbolic, which is highly desirable when working with approximate Riemann solvers, and can be used for a wide range of applications. Its particularity comes from the pressure and velocity relaxation terms appearing in the volume fraction, momentum, and energy equations. When employing large values for the relaxation parameters, the two phases come be brought in equilibrium. The 7-equation model can degenerate into the 6-equation model (same phasic pressure) \cite{Toumi_1996} and the 5-equation model (same phasic velocities and pressure) \cite{Kapila_2001}. The 7-equation model is currently discretized in space using \emph{discontinuous schemes} with approximate Riemann solvers derived from the well-established approaches for single-phase flows, while using an upwind-type flux for the non-conservative terms \cite{Saurel_2001a, Saurel_2001b, Li_2004, Zein_2010, Ambroso_2012}. 
 
 % Here, we propose to to discretized the system of equations using a continuous finite element method, 
 % stabilized using the entropy viscosity technique.
